--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ a {
     min-width: 265px;
     overflow-y: auto;
     overflow-x: hidden;
-    height: 100%;
+    height: (100vh - 60px);
     z-index: 5;
 }
 #info {
